# orion

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: README.md
docs/concepts/: agent-runtime.md  architecture.md  guard-and-approvals.md  memory-model.md  observability.md
docs/development/: extending-orion.md  release-process.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: github-assistant.md  memory-management.md  security-guard.md  troubleshooting.md
docs/journal/: day00.md
docs/reference/: cli.md  configuration.md  errors.md  metrics.md
examples/: README.md  approval_flow_demo.md  blocked_pii_demo.md  github_issue_demo.md  prompt_injection_demo.md  safe_tool_demo.md
scripts/: check_env.py  test_github_tools.py  test_guard_service.py
src/: config.py  main.py
src/agents/: __init__.py  coordinator_agent.py  general_agent.py  security_agent.py  security_review_agent.py
src/callbacks/: __init__.py  tool_callback.py
src/cli/: __init__.py  config_command.py  doctor_command.py  guard_command.py  main.py  memory_command.py  output.py  run_command.py  version_command.py
src/config/: __init__.py  config.py  github_config.py  loader.py  memory_config.py  runtime_config.py
src/container/: __init__.py  application_container.py
src/context/: __init__.py  execution_context.py
src/errors/: __init__.py  (+7 more)
tests/: test_exporter.py  test_github_client_errors.py  test_github_client_tracing.py  test_guard_errors.py  test_guard_tracing.py  test_memory_engine.py  test_memory_policy_engine.py  test_memory_policy_wiring.py  test_memory_tracing.py  test_metrics_github.py  test_metrics_guard_callback.py  test_metrics_memory.py  test_metrics_registry.py  test_metrics_runtime.py  test_metrics_wiring.py  test_persistent_preferences.py  test_runtime_errors.py  test_runtime_tracing.py  test_sqlite.py  test_sqlite_memory_errors.py  test_tool_callback.py  test_tool_callback_tracing.py  test_trace.py  test_trace_event.py  test_trace_service.py  test_trace_wiring.py
(+64 files in other folders)
