[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orion"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "httpx",
    "google-adk",
]

[project.scripts]
orion = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
